<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="medicineWithDosagesViewModel"
            type="com.example.medilista.edit.MedicineWithDosagesViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".edit.MedicineWithDosagesFragment"
        android:accessibilityPaneTitle="@string/edit_pane">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/chosen_med"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:med="@{medicineWithDosagesViewModel.med.Medicine}"
                tools:text="Amlodipin 10 mg tabletti" />

            <Button
                android:id="@+id/delete_medicine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:onClick="@{() -> medicineWithDosagesViewModel.onDeleteButtonClicked()}"
                android:text="@string/delete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chosen_med" />

            <TextView
                android:id="@+id/label_med_name"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:labelFor="@+id/edit_med_name"
                android:text="@string/hint_medicine_name_label_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/delete_medicine" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_med_name"
                style="@style/InputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hint_medicine_name"
                android:text="@{medicineWithDosagesViewModel.med.Medicine.medicineName}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_med_name" />

            <TextView
                android:id="@+id/label_med_strength"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:labelFor="@+id/edit_med_strength"
                android:text="@string/hint_medicine_strength_label_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_med_name" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_med_strength"
                style="@style/InputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hint_medicine_strength"
                android:text="@{medicineWithDosagesViewModel.med.Medicine.strength}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_med_strength" />

            <TextView
                android:id="@+id/current_form_text"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/current_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_med_strength" />

            <TextView
                android:id="@+id/current_form"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@{medicineWithDosagesViewModel.med.Medicine.form}"
                app:layout_constraintBottom_toBottomOf="@+id/current_form_text"
                app:layout_constraintStart_toEndOf="@+id/current_form_text"
                app:layout_constraintTop_toTopOf="@+id/current_form_text"
                tools:text="tabletti" />

            <TextView
                android:id="@+id/label_med_form_spinner"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:labelFor="@+id/med_form_spinner"
                android:text="@string/hint_medicine_form_label_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_form_text" />

            <Spinner
                android:id="@+id/med_form_spinner"
                style="@style/InputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:prompt="@string/form_prompt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_med_form_spinner" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/edit_taken_when_needed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:checked="@{medicineWithDosagesViewModel.med.Medicine.takenWhenNeeded}"
                android:text="@string/taken_when_needed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_alarm" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/edit_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:checked="@{medicineWithDosagesViewModel.med.Medicine.alarm}"
                android:text="@string/alarm_check"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/med_form_spinner" />

            <Button
                android:id="@+id/edit_medicine_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:onClick="@{() -> medicineWithDosagesViewModel.onSaveMedicineChangesClicked()}"
                android:text="@string/save_edited_med_info"
                android:enabled="@{medicineWithDosagesViewModel.isButtonActive}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_taken_when_needed" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dosages_list_editing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_medicine_button" />

            <Button
                android:id="@+id/button_new_dosage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:onClick="@{() -> medicineWithDosagesViewModel.onAddNewDosageButtonClicked()}"
                android:text="@string/to_dosage_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dosages_list_editing" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:onClick="@{() -> medicineWithDosagesViewModel.onReturnButtonClicked()}"
                android:text="@string/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_new_dosage" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>