<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="editDosageDetailsViewModel"
            type="com.example.medilista.edit.EditDosageDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".edit.EditDosageDetailsFragment">


        <TextView
            android:id="@+id/old_dosage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/TextStyle"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Määrä: 1.0, klo 19:00" />

        <TextView
            android:id="@+id/change_dosage_text"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/edit_dosage_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/old_dosage" />

        <NumberPicker
            android:id="@+id/number_picker_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/edit_dosage_value"
            android:onValueChange="@{(picker,oldvalue,newvalue) -> editDosageDetailsViewModel.onPickerValueChange(newvalue)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_dosage_text" />

        <TextView
            android:id="@+id/show_dosage_text_edit"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{editDosageDetailsViewModel.dosageString}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_time_picker_edit"
            tools:text="Annostuksen tiedot" />

        <TextView
            android:id="@+id/show_minutes_edit"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{editDosageDetailsViewModel.timeString}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_dosage_text_edit"
            tools:text="20.30" />

        <Button
            android:id="@+id/back_button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/continue_button"
            android:onClick="@{() -> editDosageDetailsViewModel.onBackButtonEditClicked()}"
            android:text="@string/save_edited_med_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_minutes_edit" />

        <Button
            android:id="@+id/show_time_picker_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:contentDescription="@string/show_timepicker"
            android:text="@string/show_timepicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_picker_edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>